update/公開側のnews画面にnewsとarticleを表示するため公開側のarticle関連のviewとcontroller、routeを削除して新しくrouteやviewをnewsディレクトリに作成

--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -34,7 +34,7 @@
       <div class="tab_content article-tab">
         <% if @articles.present? %>
           <% @articles.each do |article| %>
-            <%= link_to [article] do %>
+            <%= link_to article_news_path(article) do %>
               <div class="article-content">
                 <div class="">
                   <% if article.contents.first.article_image.present? %>
