--- a/app/views/public/news/show.html.erb
+++ b/app/views/public/news/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="h1style mb-5rem fw-bold">お知らせ!</h1>
+<%= render partial: 'public/shared/section-title', locals: { section_title: 'ニュース' } %>
 <div class="wrap">
   <div class="newsHeaderbox">
     <h1><%= @news.title %></h1>
