--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -18,7 +18,7 @@
           <%= link_to "求職者のみなさまへ", shops_path, class: "nav-link #{'active' if controller_name == 'shops' && ['index'].include?(action_name)}" %>
         </li>
         <li class="nav-item">
-          <%= link_to "ニュース", news_index_path, class: "nav-link #{'active' if controller_name == 'news' && ['show', 'index'].include?(action_name)}" %>
+          <%= link_to "ニュース", news_index_path, class: "nav-link #{'active' if controller_name == 'news' && ['show', 'index', 'article'].include?(action_name)}" %>
         </li>
         <li class="nav-item">
           <%= link_to "採用情報", job_entries_path , class: "nav-link #{'active' if controller_name == 'job_entries' && ['recruitment_info', 'confirm', 'complette','show', 'faq'].include?(action_name)}" %>
