--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -34,7 +34,7 @@
       <div class="d-flex  justify-content-center">
         <div class="restaurant-link">
           <div class="restaurant-link">
-            <%= link_to '店舗一覧', '/path/to/destination', class: 'user-btn restaurant-btn' %>
+            <%= link_to '店舗一覧', shops_path, class: 'user-btn restaurant-btn' %>
           </div>
         </div>
         <div class="restaurant-link">
