update/公開側のフッターのLtdアイコンの画質が悪いため、いいものに変更

--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -28,6 +28,6 @@
     </div>
   </div>
   <div class="footer-content-box2">
-    <%= image_tag('footer/Ltd.png') %>
+    <%= image_tag('footer/Ltd.png', width: '116px', height: '11px') %>
   </div>
 </footer>
