update/公開側のお知らせ一覧のブログタブのルーティングを作成してURLに？パラメーターがつかないよう設定し、pagenateのparam_nameをわかりやすい名前に変更

--- a/app/views/public/home/show.html.erb
+++ b/app/views/public/home/show.html.erb
@@ -159,7 +159,7 @@
         <%= link_to 'お知らせ一覧をみる', news_index_path, class: 'user-btn news-index-btn' %>
       </button>
       <button class="tab_button" id="tab2_button">
-        <%= link_to 'ブログ一覧をみる', news_index_path(active_tab: @active_tab), class: 'user-btn news-index-btn' %>
+        <%= link_to 'ブログ一覧をみる', blog_index_path, class: 'user-btn news-index-btn' %>
       </button>
     </div>
   </div>
