--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -22,7 +22,7 @@
         <div class="footer-link2"><%= link_to "会社概要", lbr_index_path %></div>
       </div>
       <div class="footer-link-box">
-        <div class="footer-link1"><%= link_to "ブログ", news_index_path(active_tab: 'tab2') %></div>
+        <div class="footer-link1"><%= link_to "ブログ", blog_index_path %></div>
         <div class="footer-link2"><%= link_to "お問い合わせ", lbr_index_path %></div>
       </div>
     </div>
