--- a/app/views/public/news/index.html.erb
+++ b/app/views/public/news/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'public/shared/section-title', locals: { section_title: 'ニュース' } %>
 <div class="news-wrap">
-  <div class="tab_container clearfix news-content">
+  <div class="tab_container clearfix">
     <input id="tab1" type="radio" name="tab_item" <%= "checked" unless @active_tab == 'tab2' %>>
     <label class="tab_item tab_item_left_margin tab_item_top_margin user-btn news-btn" for="tab1">お知らせ</label>
     <input id="tab2" type="radio" name="tab_item" <%= "checked" if @active_tab == 'tab2' %>>
@@ -14,12 +14,12 @@
     </div>
     <div class="tab_pointer_space"></div>
     <div class="tab_content_wrap" id="tab1_content">
-      <div class="tab_content">
+      <div class="tab_content news-tab">
         <% if @news.present? %>
           <% @news.each do |news| %>
             <div class="news-content">
-              <div class="news-date fw-bold"><%= format_date(news.calendar_date) %></div>
-              <div class="py-3 fw-bold news-title"><%= link_to news.title, [news] %></div>
+              <span class="news-calender-date"><%= puiblic_calender_date(news.calendar_date) %></span>
+              <span class="news-title"><%= link_to news.title, [news] %></span>
             </div>
           <% end %>
         <% else %>
