--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -57,7 +57,7 @@ ul {
 
 .btn-toggle:hover,
 .btn-toggle:focus {
-  color: #fd5c28;
+  color: #D32600;
 }
 
 .btn-toggle::before {
@@ -1300,12 +1300,9 @@ input[name="tab_item"] {
 # Shop
 --------------------------------------------------------------*/
 .shops-wrap {
-  max-width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 12px 24px;
-  background-color: #fff ;
-  color: #4c4c4c;
+  width: 100%;
+  background-color: #FFF7E3;
+  padding: 60px 0;
 }
 
 @media (max-width: 576px){
@@ -1315,20 +1312,29 @@ input[name="tab_item"] {
   }
 }
 
-.shop-border{
-  border-bottom: 1px solid rgb(153, 153, 153);
+.shop-content {
+  background-color: #FFFFFF;
+  max-width: 1080px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 15px;
+  padding: 20px 0;
 }
 
 .shop-card {
   padding: 16px;
   width: 100%;
-  background-color: #f5f5f5;
+  background-color: #FFFFFF;
 }
 
 @media (min-width: 480px){
-  .shop-content {
+  .shop-card-content {
     padding: 36px;
   }
+}
+
+.shop-info {
+  color: #000000;
 }
 
 @media (min-width: 480px){
@@ -1346,6 +1352,10 @@ input[name="tab_item"] {
   margin-bottom: 1em;
 }
 
+.shop-info a {
+  color: #000000;
+}
+
 @media (min-width: 480px){
   .shop-info dt {
     display: inline-block;
@@ -1356,14 +1366,16 @@ input[name="tab_item"] {
 @media (min-width: 480px){
   .shop-info dd {
     display: inline-block;
-    width: 65%;
+    width: 64%;
     margin-left: 15px;
   }
 }
 
 .shop-title {
   flex: 1 1 auto;
-  font-size: 18px;
+  font-size: 24px;
+  font-weight: 700;
+  color: #2C2C2C;
 }
 
 @media (max-width: 576px){
