update/公開側の会社概要画面のルートを新しく作成し、ヘッダーやフッターのリンクを変更

--- a/app/views/public/shared/_footer.html.erb
+++ b/app/views/public/shared/_footer.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="footer-link-box">
         <div class="footer-link1"><%= link_to "お知らせ",  news_index_path %></div>
-        <div class="footer-link2"><%= link_to "会社概要", lbr_index_path %></div>
+        <div class="footer-link2"><%= link_to "会社概要", company_index_path %></div>
       </div>
       <div class="footer-link-box">
         <div class="footer-link1"><%= link_to "ブログ", blog_index_path %></div>
