update/公開側の会社概要をデザイナー様のデザインに変更して、作成する場所をcompanyディレクトリに変更

--- a/app/views/public/company/show.html.erb
+++ b/app/views/public/company/show.html.erb
@@ -1,129 +1,128 @@
-<h1 class="h1style mb-5rem fw-bold">会社概要</h1>
-
-<div class="wrap">
+<%= render partial: 'public/shared/section-title', locals: { section_title: '会社概要' } %>
+<div class="company-wrap">
   <div class="company-content">
     <table class="table company-table">
       <tbody>
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               商号
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               株式会社LBrestaurant
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               所在地
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               
                 〒553-0006<br>
                 大阪府大阪市福島区吉野３丁目８番３号
               
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               設立
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
-              2022年12月28日 株式会社LBrestaurant
-            </div>
+            <span class="company-form">
+              2022年12月28日
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               電話番号
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               06-6459-7396
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               資本金
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
-              500万円
-            </div>
+            <span class="company-form">
+              5,000,000円
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               役員
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               <p>
                 代表取締役:<span class="ms-3">川本哲也</span><br>
                 取締役:<span class="ms-3">佐藤保</span>
               </p>
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               従業員数
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               30名(パート・アルバイト含む)
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               事業内容
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               焼き鳥、飲食店事業
-            </div>
+            </span>
           </td>
         </tr>
 
         <tr>
           <th class="col-md-4">
-            <div class="company-label">
+            <span class="company-label">
               取引銀行
-            </div>
+            </span>
           </th>
           <td class="col-md-8">
-            <div class="company-form">
+            <span class="company-form">
               三井住友銀行・京都信用金庫
-            </div>
+            </span>
           </td>
         </tr>
       </tbody>
