--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -972,6 +972,18 @@ input[name="tab_item"] {
   padding-right: 15px;
 }
 
+// 会社概要
+
+.company-wrap {
+  width: 100%;
+  background-color: #FFFFFF;
+}
+
+.company-content {
+  max-width: 1080px;
+  margin: 80px auto;
+}
+
 .company-title {
   margin-bottom: 3rem;
   margin-top: 3rem;
@@ -1008,6 +1020,7 @@ input[name="tab_item"] {
 
 .company-table {
   height: 0;
+  border-collapse: collapse;
 }
 
 
@@ -1017,10 +1030,16 @@ input[name="tab_item"] {
   }
 }
 
+.company-table tr {
+  height: 100px;
+  border: 1px solid #D3D3D3;
+}
+
 .company-table th {
-  font-weight: bold;
   height: 100%;
-  padding: 1.125em 0;
+  padding: 0;
+  background-color: #FFF7E3;
+  border: 1px solid #D3D3D3;
 }
 
 @media (max-width: 576px){
@@ -1028,10 +1047,6 @@ input[name="tab_item"] {
     display: block;
     padding: 0.86em 0;
   }
-}
-
-.company-table td {
-  padding: 1.29em 0 1.29em 2.14em;
 }
 
 @media (max-width: 576px){
@@ -1042,9 +1057,10 @@ input[name="tab_item"] {
 }
 
 .company-label {
-  background-color: #e8e8e8;
   height: 100%;
-  padding: 1.125em 6.37em 1em 1.56em;
+  padding-left: 50px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 @media (max-width: 576px){
@@ -1058,6 +1074,9 @@ input[name="tab_item"] {
   flex-wrap: wrap;
   align-items: center;
   height: 100%;
+  font-size: 16px;
+  font-weight: 500;
+  padding-left: 50px;
 }
 
 @media (max-width: 576px){
