--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -29,6 +29,10 @@ ul {
   list-style: none;
 }
 
+.error-icon {
+  margin-right: 5px;
+}
+
 .page-link.active, .active > .page-link {
   z-index: initial;
   color: initial;
@@ -165,6 +169,44 @@ ul {
     padding-left: 20px;
     padding-right: 20px;
   }
+}
+
+.form-text,
+.form-box a {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 17px;
+  color: #2C2C2C;
+}
+
+.form-box li {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 17px;
+}
+
+.form-box {
+  max-width: 350px;
+  margin: 0 auto;
+}
+
+.form {
+  margin-bottom: 20px;
+}
+
+.form-btn-box {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.badge-alert {
+  background-color: #FF7009;
+  color: #FFFFFF;
+}
+
+.badge {
+  font-size: 10px;
+  font-weight: 500;
 }
 
 .content-info {
@@ -705,7 +747,8 @@ ul {
 
 .about-us-btn,
 .restaurant-btn,
-.news-index-btn {
+.news-index-btn,
+.form-btn {
   width: 280px;
   height: 60px;
   background-color: #D32600;
@@ -984,45 +1027,10 @@ input[name="tab_item"] {
   margin: 80px auto;
 }
 
-.company-title {
-  margin-bottom: 3rem;
-  margin-top: 3rem;
-}
-
-.company-title2 {
-  margin-bottom: 1rem;
-  margin-top: 3rem;
-}
-
-.company-subtitle {
-  margin-bottom: 3rem;
-}
-
-@media (max-width: 576px){
-  .company-title {
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-  }
-}
-
-@media (max-width: 576px){
-  .company-title2 {
-    margin-bottom: 0.5rem;
-    margin-top: 1.5rem;
-  }
-}
-
-@media (max-width: 576px){
-  .company-subtitle {
-    margin-bottom: 1.5rem;
-  }
-}
-
 .company-table {
   height: 0;
   border-collapse: collapse;
 }
-
 
 @media (max-width: 576px){
   .company-table tr {
@@ -1406,6 +1414,18 @@ input[name="tab_item"] {
 /*--------------------------------------------------------------
 # Contacts
 --------------------------------------------------------------*/
+.contact-wrap {
+  width: 100%;
+}
+
+.contact-content {
+  max-width: 800px;
+  margin: 100px auto;
+  border: 1px solid #D3D3D3;
+  box-shadow: 4px 4px 4px 0px #00000040;
+  padding: 50px 0;
+}
+
 @media (max-width: 576px){
   .contact-content {
     font-size: 14px;
@@ -1413,17 +1433,18 @@ input[name="tab_item"] {
 }
 
 .contact-title {
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  margin-bottom: 25px;
+  text-align: center;
 }
 
 .contact-title2 {
-  margin-bottom: 1rem;
-  margin-top: 3rem;
+  margin-bottom: 15px;
+  margin-top: 50px;
 }
 
 .contact-subtitle {
-  margin-bottom: 3rem;
+  margin-bottom: 25px;
+  color: #D32600;
 }
 
 @media (max-width: 576px){
@@ -1444,6 +1465,17 @@ input[name="tab_item"] {
   .contact-subtitle {
     margin-bottom: 1.5rem;
   }
+}
+
+.contact-attention-text {
+  margin: 0 40px 30px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 23px;
+}
+
+.alert-text {
+  color: #D32600;
 }
 
 .contact-table {
