--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -1,153 +1,82 @@
-<h1 class="h1style mb-5rem fw-bold">お問い合わせ（入力）</h1>
-
-<div class="wrap">
+<div class="contact-wrap">
   <div class="contact-content">
-    <ul class="fw-bold border p-3">
-      <li class="text-danger">※ お忘れ物など、お急ぎの場合は直接店舗までご連絡ください。</li>
+    <div class="contact-title"><%= image_tag('contact/title.png', width: '213px', height: '31px') %></div>
+    <ul class="contact-attention-text">
+      <li class="alert-text">※ お忘れ物など、お急ぎの場合は直接店舗までご連絡ください。</li>
       <li>※ ご入力いただいた情報は当社グループ及び店舗と皆さまのコミュニケーションを目的として利用し、その他の目的で外部に流出するようなことは一切ございません。</li>
       <li>※ 内容によりましては、ご返答までに数日いただく場合や、ご返答出来かねる場合もございます。予めご了承ください。</li>
       <li>※ 回答はお客様個人宛にお送りするものでございますので、一部または全部の転載、二次利用はご遠慮ください。</li>
     </ul>
-
-    <h3 class="contact-title text-center fw-bold">内容を入力</h3>
     <%= form_with model: @contact, url: confirm_contacts_url(@contact), local: true  do |f| %>
-      <div>
-        <table class="table contact-table">
-          <tbody>
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :contact_type %>
-                  <span class="badge rounded-pill text-bg-danger">必須</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.select :contact_type, Contact.contact_type.options, { prompt: '問い合わせ内容をお選びください' }, { selected: f.object.contact_type, class: 'form-select' } %>
-                  <%= show_error_messages(f.object, :contact_type) %>
-                </div>
-              </td>
-            </tr>
+      <div class="form-box">
+        <div class="form">
+          <%= f.label :contact_type, class: "form-label form-text" %>
+          <span class="badge rounded-pill badge-alert">必須</span>
+          <%= f.select :contact_type, Contact.contact_type.options, { prompt: '問い合わせ内容をお選びください' }, { selected: f.object.contact_type, class: 'form-select form-text' } %>
+          <%= show_error_messages(f.object, :contact_type) %>
+        </div>
 
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :message %>
-                  <span class="badge rounded-pill text-bg-danger">必須</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.text_area :message, class: 'form-control', value: f.object.message, placeholder: "店舗へのご意見、ご感想の場合は『ご利用店舗・ご利用日時・お時間帯』をご記入お願いいたします。", rows: 12 %>
-                  <%= show_error_messages(f.object, :message) %>
-                </div>
-              </td>
-            </tr>
+        <div class="form">
+          <%= f.label :email, class: "form-label form-text" %>
+          <span class="badge rounded-pill badge-alert">必須</span>
+          <%= f.email_field :email, autocomplete: "email", class: "form-control form-text", value: f.object.email, placeholder: "lbrestaurant@example.com" %>
+          <%= show_error_messages(f.object, :email) %>
+        </div>
 
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :email %>
-                  <span class="badge rounded-pill text-bg-danger">必須</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.email_field :email, autocomplete: "email", class: "form-control", value: f.object.email, placeholder: "lbrestaurant@example.com" %>
-                  <%= show_error_messages(f.object, :email) %>
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :callback_requested %>
-                  <span class="badge rounded-pill text-bg-danger">必須</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <% Contact.callback_requested.values.collect.each do |key, value| %>
-                    <div class="form-check contact-as-radio">
-                      <%= f.radio_button :callback_requested, key, class: 'form-check-input' %>
-                      <%= f.label key, value, class: 'form-check-label' %>
-                    </div>
-                  <% end %>
-                  <%= show_error_messages(f.object, :callback_requested) %>
-                </div>
-              </td>
-            </tr>
-          </table>
-          
-            <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
-            <p class="text-center fw-bold mb-5">弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
-
-          <table class="table contact-table">
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :contact_method %>
-                  <span class="badge rounded-pill text-bg-success">任意</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <%= vite_javascript_tag 'Contact.tsx' %>
-                <contact-component
-                    data-props="<%= { contactMethodValuesCollect: Contact.contact_method.values, contactMethod: f.object.contact_method }.to_json %>"
-                  >
-                  </contact-component>
-              </td>
-            </tr>
-
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :name %>
-                  <span class="badge rounded-pill text-bg-success">任意</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.text_field :name, class: 'form-control', value: f.object.name, placeholder: "飲食太郎" %>
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :name_kana %>
-                  <span class="badge rounded-pill text-bg-success">任意</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.text_field :name_kana, class: 'form-control', value: f.object.name_kana, placeholder: "インショクタロウ" %>
-                </div>
-              </td>
-            </tr>
-
-            <tr>
-              <th class="col-md-4">
-                <div class="contact-label">
-                  <%= f.label :phone_number %>
-                  <span class="badge rounded-pill text-bg-success">任意</span>
-                </div>
-              </th>
-              <td class="col-md-8">
-                <div class="contact-form">
-                  <%= f.text_field :phone_number, class: 'form-control', value: f.object.phone_number, placeholder: "012-3456-789" %>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="form">
+          <%= f.label :callback_requested, class: "form-label form-text" %>
+          <span class="badge rounded-pill badge-alert">必須</span>
+          <div class="contact-form">
+            <% Contact.callback_requested.values.collect.each do |key, value| %>
+              <div class="form-check contact-as-radio form-text">
+                <%= f.radio_button :callback_requested, key, class: 'form-check-input' %>
+                <%= f.label key, value, class: 'form-check-label' %>
+              </div>
+            <% end %>
+          </div>
+          <%= show_error_messages(f.object, :callback_requested) %>
+        </div>
+      
+        <div class="form">
+          <%= f.label :message, class: "form-label form-text" %>
+          <span class="badge rounded-pill badge-alert">必須</span>
+          <%= f.text_area :message, class: 'form-control form-text', value: f.object.message, placeholder: "店舗へのご意見、ご感想の場合は『ご利用店舗・ご利用日時・お時間帯』をご記入お願いいたします。", rows: 12 %>
+          <%= show_error_messages(f.object, :message) %>
+        </div>
       </div>
+      <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
+      <p class="text-center fw-bold contact-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
+      <div class="form-box">
+        <div class="form">
+          <%= f.label :contact_method, class: "form-label form-text" %>
+          <span class="badge rounded-pill text-bg-success">任意</span>
+          <%= vite_javascript_tag 'Contact.tsx' %>
+          <contact-component
+              data-props="<%= { contactMethodValuesCollect: Contact.contact_method.values, contactMethod: f.object.contact_method }.to_json %>"
+            >
+            </contact-component>
+        </div>
 
-      <div class="contact-btn-box">
-        <ul class="list-inline">
-          <li class="list-inline-item"><%= f.submit "確認する", class: 'btn btn-primary' %></li>
+        <div class="form">
+          <%= f.label :name, class: "form-label form-text" %>
+          <span class="badge rounded-pill text-bg-success">任意</span>
+          <%= f.text_field :name, class: 'form-control form-text', value: f.object.name, placeholder: "飲食太郎" %>
+        </div>
+
+        <div class="form">
+          <%= f.label :name_kana, class: "form-label form-text" %>
+          <span class="badge rounded-pill text-bg-success">任意</span>
+          <%= f.text_field :name_kana, class: 'form-control form-text', value: f.object.name_kana, placeholder: "インショクタロウ" %>
+        </div>
+
+        <div class="form">
+          <%= f.label :phone_number, class: "form-label form-text" %>
+          <span class="badge rounded-pill text-bg-success">任意</span>
+          <%= f.text_field :phone_number, class: 'form-control form-text', value: f.object.phone_number, placeholder: "012-3456-789" %>
+        </div>
+
+        <ul class="form-btn-box">
+          <li class="list-inline-item"><%= f.submit "確認する", class: 'user-btn form-btn' %></li>
         </ul>
       </div>
     <% end %>
