update/公開側の問い合わせ確認画面をデザイナー様のデザインに合わせて変更

--- a/app/views/public/contacts/confirm.html.erb
+++ b/app/views/public/contacts/confirm.html.erb
@@ -1,129 +1,103 @@
-<h1 class="h1style mb-5rem fw-bold">お問い合わせ（確認）</h1>
-
-<div class="wrap">
+<div class="contact-wrap">
   <div class="contact-content">
-    <h3 class="contact-title text-center fw-bold">内容を確認</h3>
-    <div>
-      <table class="table contact-table">
-        <tbody>
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                お問い合わせタイプ
-                <span class="badge rounded-pill text-bg-danger">必須</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.contact_type_text %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                お問い合わせ内容
-                <span class="badge rounded-pill text-bg-danger">必須</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.message %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                メールアドレス
-                <span class="badge rounded-pill text-bg-danger">必須</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.email %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                返信を
-                <span class="badge rounded-pill text-bg-danger">必須</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.callback_requested_text %>
-              </div>
-            </td>
-          </tr>
-        </table>
-        
-          <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
-          <p class="text-center fw-bold mb-5">弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
-
-        <table class="table contact-table">
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                連絡方法
-                <span class="badge rounded-pill text-bg-success">任意</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.contact_method_text %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                お名前
-                <span class="badge rounded-pill text-bg-success">任意</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.name %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                フリガナ
-                <span class="badge rounded-pill text-bg-success">任意</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.name_kana %>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <th class="col-md-4">
-              <div class="contact-label">
-                お電話番号
-                <span class="badge rounded-pill text-bg-success">任意</span>
-              </div>
-            </th>
-            <td class="col-md-8">
-              <div class="contact-form">
-                <%= @contact.phone_number %>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="contact-title"><%= image_tag('contact/confirm-title.png', width: '300px', height: '31px') %></div>
+    <ul class="contact-attention-text text-center">
+      <li>入力内容をご確認ください。</li>
+      <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
+    </ul>
+    <div class="form-box">
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お問い合わせタイプ
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.contact_type_text %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            メールアドレス
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.email %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            返信を
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.callback_requested_text %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お問い合わせ内容
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.message %>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
+    <p class="text-center fw-bold contact-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
+    <div class="form-box">
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            連絡方法
+            <span class="badge rounded-pill text-bg-success">任意</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.contact_method_text.blank? ? "記入なし" : @contact.contact_method_text %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お名前
+            <span class="badge rounded-pill text-bg-success">任意</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.name.blank? ? "記入なし" : @contact.name %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            フリガナ
+            <span class="badge rounded-pill text-bg-success">任意</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.name_kana.blank? ? "記入なし" : @contact.name_kana %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お電話番号
+            <span class="badge rounded-pill text-bg-success">任意</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @contact.phone_number.blank? ? "記入なし" : @contact.phone_number %>
+          </div>
+        </div>
+      </div>
     </div>
 
     <%= form_with model: @contact, local: true do |f| %>
@@ -136,14 +110,11 @@
       <%= f.hidden_field :name_kana %>
       <%= f.hidden_field :phone_number %>
 
-      <div class="contact-btn-box">
-        <ul class="list-inline">
-          <li class="list-inline-item"><%= f.submit "修正する", name: "back", class: 'btn btn-secondary' %></li>
-          <li class="list-inline-item"><%= f.submit "送信する", class: 'btn btn-primary' %></li>
-        </ul>
-      </div>
+      <ul class="form-btn-box form-flex">
+        <li class="list-inline-item"><%= f.submit "修正する", name: "back", class: 'user-btn form-fix-btn  form-confirm-btn' %></li>
+        <li class="list-inline-item"><%= f.submit "送信する", class: 'user-btn form-btn form-confirm-btn' %></li>
+      </ul>
     <% end %>
-
   </div>
 </div>
 
