--- a/app/views/public/contacts/new.html.erb
+++ b/app/views/public/contacts/new.html.erb
@@ -45,7 +45,7 @@
         </div>
       </div>
       <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
-      <p class="text-center fw-bold contact-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
+      <p class="text-center contact-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
       <div class="form-box">
         <div class="form">
           <%= f.label :contact_method, class: "form-label form-text" %>
