--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -199,6 +199,26 @@ ul {
   margin-top: 30px;
 }
 
+.form-border {
+  border-bottom: 1px solid #D3D3D3;
+}
+
+.form-margin-left {
+  margin-left: 10px;
+}
+
+.form-flex {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-confirm-btn {
+  width: 200px !important;
+}
+
+
 .badge-alert {
   background-color: #FF7009;
   color: #FFFFFF;
@@ -744,6 +764,20 @@ ul {
 .about-us-img {
   margin-left: 30px;
 }
+
+.form-fix-btn {
+  width: 280px;
+  height: 60px;
+  background-color: #D9D9D9;  
+  color: #2C2C2C;
+  font-size: 18px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 
 .about-us-btn,
 .restaurant-btn,
@@ -1445,6 +1479,9 @@ input[name="tab_item"] {
 .contact-subtitle {
   margin-bottom: 25px;
   color: #D32600;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 23px;
 }
 
 @media (max-width: 576px){
