--- a/app/views/public/job_entries/confirm.html.erb
+++ b/app/views/public/job_entries/confirm.html.erb
@@ -1,123 +1,102 @@
-<h1 class="h1style mb-5rem fw-bold">応募について（確認）</h1>
-
-<div class="wrap">
-  <div class="job-entry-content">
-    <h3 class="job-entry-title text-center fw-bold">内容を確認</h3>
-    <tbody>
-      <table class="table job-entry-table">
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              応募するタイプ
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.recruit_type_text %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              お名前
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.name %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              フリガナ
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.name_kana %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              性別
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.sex_text %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              生年月日
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= format_date(@job_entry.birth_date) %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              メールアドレス
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.email %>
-            </div>
-          </td>
-        </tr>
-
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              お電話番号
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.phone_number %>
-            </div>
-          </td>
-        </tr>
-        
-        <tr>
-          <th class="col-md-4">
-            <div class="job-entry-label">
-              住所
-              <span class="badge rounded-pill text-bg-danger">必須</span>
-            </div>
-          </th>
-          <td class="col-md-8">
-            <div class="job-entry-form">
-              <%= @job_entry.prefecture.name %><%= @job_entry.city_name %><%= @job_entry.address %>
-            </div>
-          </td>
-        </tr>       
-      </table>
-    </tbody>
+<div class="contact-wrap">
+  <div class="contact-content">
+    <div class="contact-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '31px') %></div>
+    <ul class="contact-attention-text text-center">
+      <li>入力内容をご確認ください。</li>
+      <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
+    </ul>
+    <div class="form-box">
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            応募するタイプ
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.recruit_type_text %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お名前
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.name %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            フリガナ
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.name_kana %>
+          </div>
+        </div>
+      </div>
+      
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            性別
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.sex_text %>
+          </div>
+        </div>
+      </div>
+    
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            生年月日
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= format_date(@job_entry.birth_date) %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            メールアドレス
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.email %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            お電話番号
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.phone_number %>
+          </div>
+        </div>
+      </div>
+      <div class="form form-border">
+        <div class="form-margin-left">
+          <div class="form-text form-label">
+            住所
+            <span class="badge rounded-pill badge-alert">必須</span>
+          </div>
+          <div class="form-label form-text">
+            <%= @job_entry.prefecture.name %><%= @job_entry.city_name %><%= @job_entry.address %>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <%= form_with model: @job_entry, local: true do |f| %>
       <%= f.hidden_field :recruit_type %>
@@ -131,15 +110,11 @@
       <%= f.hidden_field :city_name %>
       <%= f.hidden_field :address %>
       
-
-      <div class="job-entry-btn-box">
-        <ul class="list-inline">
-          <li class="list-inline-item"><%= f.submit "修正する", name: "back", class: 'btn btn-secondary' %></li>
-          <li class="list-inline-item"><%= f.submit "送信する", class: 'btn btn-primary' %></li>
-        </ul>
-      </div>
+      <ul class="form-btn-box form-flex">
+        <li class="list-inline-item"><%= f.submit "修正する", name: "back", class: 'user-btn form-fix-btn  form-confirm-btn' %></li>
+        <li class="list-inline-item"><%= f.submit "送信する", class: 'user-btn form-btn form-confirm-btn' %></li>
+      </ul>
     <% end %>
-
   </div>
 </div>
 
