--- a/app/views/public/contacts/complete.html.erb
+++ b/app/views/public/contacts/complete.html.erb
@@ -1,6 +1,6 @@
 <div class="contact-wrap">
   <div class="contact-content">
-    <div class="contact-title"><%= image_tag('contact/complete-title.png', width: '270px', height: '31px') %></div>
+    <div class="contact-title"><%= image_tag('complete-title.png', width: '270px', height: '31px') %></div>
     <ul class="contact-attention-text text-center">
       <li>お問い合わせありがとうございます。</li>
       <li>担当者が確認次第、記入された連絡先へご連絡差し上げます。</li>
