--- a/app/views/public/job_entries/complete.html.erb
+++ b/app/views/public/job_entries/complete.html.erb
@@ -1,8 +1,14 @@
-<h1 class="h1style mb-5rem fw-bold">応募について（完了）</h1>
-
-<div class="wrap">
-  <div class="job-entry-content">
-    <h3 class="job-entry-title text-center fw-bold">送信が完了いたしました。</h3>
-    <p>ご応募ありがとうございます</p>
+<div class="contact-wrap">
+  <div class="contact-content">
+    <div class="contact-title"><%= image_tag('complete-title.png', width: '270px', height: '31px') %></div>
+    <ul class="contact-attention-text text-center">
+      <li>お問い合わせありがとうございます。</li>
+      <li>担当者が確認次第、記入された連絡先へご連絡差し上げます。</li>
+      <li>今しばらくお待ちください。</li>
+      <li>ご登録いただいたメールアドレス宛てに自動返信メールをお送りしております。</li>
+      <li>※自動返信メールが届いていない場合は、お問い合わせが完了しておりません。</li>
+      <li>迷惑メールフォルダに振り分けられていることがございます。</li>
+      <li>恐れ入りますがご確認ください。</li>
+    </ul>
   </div>
 </div>
