update/公開側の入力フォームのクラス名を変更

--- a/app/views/public/contacts/confirm.html.erb
+++ b/app/views/public/contacts/confirm.html.erb
@@ -1,7 +1,7 @@
-<div class="contact-wrap">
-  <div class="contact-content">
-    <div class="contact-title"><%= image_tag('contact/confirm-title.png', width: '300px', height: '31px') %></div>
-    <ul class="contact-attention-text text-center">
+<div class="form-wrap">
+  <div class="form-content">
+    <div class="form-title"><%= image_tag('contact/confirm-title.png', width: '300px', height: '31px') %></div>
+    <ul class="form-attention-text text-center">
       <li>入力内容をご確認ください。</li>
       <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
     </ul>
@@ -51,8 +51,8 @@
         </div>
       </div>
     </div>
-    <h3 class="text-center fw-bold contact-title2">お客様情報</h3>
-    <p class="text-center fw-bold contact-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
+    <h3 class="text-center fw-bold form-title2">お客様情報</h3>
+    <p class="text-center fw-bold form-subtitle">※ 弊社からの返答・返信をご希望の場合は必ずご記入ください。</p>
     <div class="form-box">
       <div class="form form-border">
         <div class="form-margin-left">
