--- a/app/views/public/job_entries/complete.html.erb
+++ b/app/views/public/job_entries/complete.html.erb
@@ -1,7 +1,7 @@
-<div class="contact-wrap">
-  <div class="contact-content">
-    <div class="contact-title"><%= image_tag('complete-title.png', width: '270px', height: '31px') %></div>
-    <ul class="contact-attention-text text-center">
+<div class="form-wrap">
+  <div class="form-content">
+    <div class="form-title"><%= image_tag('complete-title.png', width: '270px', height: '31px') %></div>
+    <ul class="form-attention-text text-center">
       <li>お問い合わせありがとうございます。</li>
       <li>担当者が確認次第、記入された連絡先へご連絡差し上げます。</li>
       <li>今しばらくお待ちください。</li>
