--- a/app/views/public/job_entries/confirm.html.erb
+++ b/app/views/public/job_entries/confirm.html.erb
@@ -1,7 +1,7 @@
-<div class="contact-wrap">
-  <div class="contact-content">
-    <div class="contact-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '31px') %></div>
-    <ul class="contact-attention-text text-center">
+<div class="form-wrap">
+  <div class="form-content">
+    <div class="form-title"><%= image_tag('job_entry/confirm-title.png', width: '350px', height: '31px') %></div>
+    <ul class="form-attention-text text-center">
       <li>入力内容をご確認ください。</li>
       <li>問題なければ送信ボタンを、誤りがあれば修正ボタンを押してください。</li>
     </ul>
