--- a/app/views/public/job_entries/new.html.erb
+++ b/app/views/public/job_entries/new.html.erb
@@ -1,7 +1,7 @@
-<div class="contact-wrap">
-  <div class="contact-content">
-    <div class="contact-title"><%= image_tag('job_entry/title.png', width: '270px', height: '31px') %></div>
-    <ul class="contact-attention-text text-center">
+<div class="form-wrap">
+  <div class="form-content">
+    <div class="form-title"><%= image_tag('job_entry/title.png', width: '270px', height: '31px') %></div>
+    <ul class="form-attention-text text-center">
       <li>【業界・職種未経験／第二新卒／フリーターさんも歓迎！】</li>
       <li>学歴不問＆前職の雇用形態なども一切問いません。</li>
       <li>調理も接客も、すべて入社後に学べます！</li>
