--- a/app/frontend/entrypoints/public.scss
+++ b/app/frontend/entrypoints/public.scss
@@ -154,21 +154,62 @@ ul {
  }
 }
 
-.wrap {
-  max-width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 50px 80px;
-  background-color: #fff ;
-  color: #4c4c4c;
+.form-wrap {
+  width: 100%;
+}
+
+.form-content {
+  max-width: 800px;
+  margin: 100px auto;
+  border: 1px solid #D3D3D3;
+  box-shadow: 4px 4px 4px 0px #00000040;
+  padding: 50px 0;
+}
+
+
+.form-title {
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.form-title2 {
+  margin-bottom: 15px;
+  margin-top: 50px;
+}
+
+.form-subtitle {
+  margin-bottom: 25px;
+  color: #D32600;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 23px;
 }
 
 @media (max-width: 576px){
-  .wrap {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+  .form-title {
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
   }
+}
+
+@media (max-width: 576px){
+  .form-title2 {
+    margin-bottom: 0.5rem;
+    margin-top: 1.5rem;
+  }
+}
+
+@media (max-width: 576px){
+  .form-subtitle {
+    margin-bottom: 1.5rem;
+  }
+}
+
+.form-attention-text {
+  margin: 0 40px 30px;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 23px;
 }
 
 .form-text,
@@ -1454,68 +1495,7 @@ input[name="tab_item"] {
 /*--------------------------------------------------------------
 # Contacts
 --------------------------------------------------------------*/
-.contact-wrap {
-  width: 100%;
-}
 
-.contact-content {
-  max-width: 800px;
-  margin: 100px auto;
-  border: 1px solid #D3D3D3;
-  box-shadow: 4px 4px 4px 0px #00000040;
-  padding: 50px 0;
-}
-
-@media (max-width: 576px){
-  .contact-content {
-    font-size: 14px;
-  }
-}
-
-.contact-title {
-  margin-bottom: 25px;
-  text-align: center;
-}
-
-.contact-title2 {
-  margin-bottom: 15px;
-  margin-top: 50px;
-}
-
-.contact-subtitle {
-  margin-bottom: 25px;
-  color: #D32600;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 23px;
-}
-
-@media (max-width: 576px){
-  .contact-title {
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-  }
-}
-
-@media (max-width: 576px){
-  .contact-title2 {
-    margin-bottom: 0.5rem;
-    margin-top: 1.5rem;
-  }
-}
-
-@media (max-width: 576px){
-  .contact-subtitle {
-    margin-bottom: 1.5rem;
-  }
-}
-
-.contact-attention-text {
-  margin: 0 40px 30px;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 23px;
-}
 
 .alert-text {
   color: #D32600;
